--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+
+
+    <main>
+
+    <div class="listcontainer"></div>
+    <div class="itemcontainer"></div>
+
+    </main>
+
+
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
 </body>
 
